kubernetes/redmine-deployment.yaml
##########################################################################
# PostgreSQL
##########################################################################
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app: redmine
    tiers: database
spec:
  type: ClusterIP
  ports:
  - name: postgres
    port: 5432
    targetPort: 5432
    protocol: TCP
  selector:
    app: redmine
    tiers: database
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redmine
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: redmine
        tiers: database
    spec:
      containers:
      - image: amd64/postgres:9.4
        name: postgres
        ports:
        - containerPort: 5432
          name: postgres
        volumeMounts:
        - name: redmine-db
          mountPath: /var/lib/postgresql/data
        - name: redmine-dblog
          mountPath: /var/log/postgresql
      volumes:
      - name: redmine-db
        persistentVolumeClaim:
          claimName: redmine-db
      - name: redmine-dblog
        persistentVolumeClaim:
          claimName: redmine-dblog
---
##########################################################################
# Deployment (memcached)
##########################################################################
apiVersion: v1
kind: Service
metadata:
  name: memcached
  labels:
    app: wordpress
spec:
  ports:
    - name: memcached-tcp
      port: 11211
      targetPort: 11211
      protocol: TCP
    - name: memcached-udp
      port: 11211
      targetPort: 11211
      protocol: UDP
  selector:
    app: wordpress
    tier: caching
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memcached
  labels:
    app: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress
        tier: caching
    spec:
      containers:
      - image: amd64/memcached:1.5
        name: memcached
        ports:
        - containerPort: 11211
          name: memcached-tcp
          protocol: TCP
        - containerPort: 11211
          name: memcached-udp
          protocol: UDP
        livenessProbe:
          tcpSocket:
            port: 11211
          initialDelaySeconds: 30
          timeoutSeconds: 30
---
##########################################################################
# Redmine
##########################################################################
apiVersion: v1
kind: Service
metadata:
  name: redmine
  labels:
    app: redmine
    tiers: webapp
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: redmine
    tiers: webapp
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redmine
  labels:
    app: redmine
    tiers: webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redmine
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: redmine
        tiers: webapp
    spec:
      containers:
      - image: fjudith/redmine
        name: redmine
        ports:
        - containerPort: 80
          name: http
        volumeMounts:
        - name: redmine-data
          mountPath: /home/redmine/data
        livenessProbe:
          tcpSocket:
              port: 80
          initialDelaySeconds: 60
          timeoutSeconds: 5
        readinessProbe:
          tcpSocket:
            port: 80
          timeoutSeconds: 5
      volumes:
      - name: redmine-data
        persistentVolumeClaim:
          claimName: redmine-data
---
